# quantique

./: .gitignore  EXPLICATION.md  README.md  battleship_model.py  battleship_pygame.py  make_demo_gif.py  mini_projet_quantique.docx  pyproject.toml  quantum_core.py
